--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/graybishop/team-profile-generator#readme",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "esm": "^3.2.25",
     "inquirer": "^8.2.0"
   },
   "devDependencies": {
