--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "homepage": "https://github.com/graybishop/team-profile-generator#readme",
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "esm": "^3.2.25",
     "inquirer": "^8.2.0"
   },
   "devDependencies": {
     "jest": "^27.2.5"
   },
-  "type": "module"
+  "type": "module",
+  "jest": {
+    "verbose": true
+  }
 }
