tests are still not working correctly

--- a/package.json
+++ b/package.json
@@ -28,8 +28,5 @@
   "devDependencies": {
     "jest": "^27.2.5"
   },
-  "type": "module",
-  "jest": {
-    "verbose": true
-  }
+  "type": "module"
 }
